<resources>
    <string name="app_name">iosched_teardown</string>
    <string name="title_schedule" translation_description="The title for the schedule screen where user can see their schedule for Google I/O.">Schedule</string>
    <string name="title_map" translation_description="The title for the map screen where user can see the map of the venue.">Map</string>
    <string name="title_info" translation_description="The title for the info screen where user can see various information, such as FAQ and travel info.">Info</string>
    <string name="filters" translation_description="The label for the button to filter sessions by their topics, room, and so on.">Filters</string>
    <string name="category_heading_tracks" translation_description="Label in the filters panel above session topics (Android, Cloud, etc.)">Topics</string>
    <string name="category_heading_types" translation_description="Label in the filters panel above event types (Sessions, Codelabs, etc.)">Types</string>
    <string name="clear_all" translation_description="The label for the button to clear all the filter conditions.">Clear all</string>
    <string name="reset" translation_description="The label for the button to reset the filter conditions.">Reset</string>
    <string name="pinned_events_filter_description" translation_description="Message shown when the user toggles the switch to see their pinned events.">Showing only starred and reserved events</string>
    <plurals name="filter_event_count" translation_description="A label showing how many events match the current filters">
        <item quantity="one">%1$d Event</item>
        <item quantity="other">%1$d Events</item>
    </plurals>
    <string name="starred_and_reserved">Your starred and reserved events</string>
    <string name="starred_and_reserved_short">Starred &amp; reserved</string>
    <string name="session_duration_location" translatable="false">%1s / %2s</string>
    <string name="session_date_duration_location" translatable="false">%1s / %2s / %3s</string>
    <string name="agenda" translation_description="The title for the agenda screen where user can see all the sessions they plan to attend.">Agenda</string>
    <string name="agenda_duration" translatable="false">%1$s – %2$s</string>
    <string name="event_starred" translation_description="The message shown when user adds an event to their schedule.">Event added to your starred items</string>
    <string name="event_unstarred" translation_description="The message shown when user removes an event from their schedule.">Event removed from starred items</string>
    <string name="event_star_error" translation_description="The message shown for an error when user tries to add an event.">Error adding event to starred items</string>
    <string name="reservation_error" translation_description="The message shown for an error when user is trying to reserve a session attendance.">Error making changes to reservation. Wait for previous requests to finish or try again later.</string>
    <string name="reservation_request_succeeded" translation_description="The message shown when user tries to reserve a seat for a session.">Reservation requested.</string>
    <string name="reservation_cancel_succeeded" translation_description="The message shown when user has canceled their reservation for a session.">Reservation canceled: \"&lt;b>%s&lt;/b>.\"</string>
    <string name="reservation_new" translation_description="The message shown when user's reservation is confirmed by the system.">Your seat has been reserved for \"&lt;b>%s&lt;/b>\".</string>
    <string name="reservation_replaced" translation_description="The message shown when user has chosen to replace a reservation for another and it is confirmed by the system.">Event replaced.</string>
    <string name="waitlist_new" translation_description="The message shown when user is added to the waitlist of a session reservation.">You have been waitlisted.</string>
    <string name="waitlist_cancel_succeeded" translation_description="The message shown when user has canceled their reservation and was waitlisted for a session.">Removed from waitlist.</string>
    <string name="got_it" translation_description="The label for dismissing a information messages.">Got it</string>
    <string name="dont_show" translation_description="The label for opting out of in-app notification messages.">Don\'t show</string>
    <string name="reservation_denied_cutoff" translation_description="The message shown when user's reservation is denied because the session starts too soon">Reservation denied: too close to start time.</string>
    <string name="reservation_denied_clash" translation_description="The message shown when user's reservation is denied because they have reserved another event at that time">Reservation denied: clash with another reservation</string>
    <string name="reservation_denied_unknown" translation_description="The message shown when user's reservation is denied because of an unknown error">Reservation denied: unknown error.</string>
    <string name="cancellation_denied_cutoff" translation_description="The message shown when user is trying to cancel a reservation but it's denied because the session starts too soon">Cancellation denied: too close to start time.</string>
    <string name="cancellation_denied_unknown" translation_description="The message shown when user is trying to cancel a reservation but it's denied because of an unknown error">Cancellation denied: unknown error.</string>
    <string name="schedule_filters_empty" translation_description="The message shown when a schedule page is empty because no events match the current filters.">No events today match your current filters.</string>
    <string name="reservation_reservable" translation_description="Label shown on events for which the user can request to reserve a seat.">Reserve seat</string>
    <string name="reservation_reserved" translation_description="Label shown on events for which the user has reserved a seat.">Reserved</string>
    <string name="reservation_waitlisted" translation_description="Label shown on events for which the user is on the waitlist.">Waitlisted</string>
    <string name="reservation_waitlist_available" translation_description="Label shown on events for which the user can join the waitlist.">Join waitlist</string>
    <string name="reservation_disabled" translation_description="Label shown on events for which the user cannot request a seat.">Reservations unavailable</string>
    <string name="reservation_pending" translation_description="Label shown on events for which a reservation request is pending.">Reservation pending</string>
    <string name="schedule_hint_title" translation_description="The title of the schedule hint dialog.">Customize your schedule</string>
    <string name="travel_directions_title" translation_description="Header label for driving directions details.">Driving Directions</string>
    <string name="travel_shuttle_title" translation_description="Header label for shuttle service details.">Shuttle Service (Recommended)</string>
    <string name="travel_carpool_parking_title" translation_description="Header label for parking and carpooling details.">Parking &amp; Carpooling</string>
    <string name="travel_ride_sharing_title" translation_description="Header label for ride sharing app details (i.e. Lyft Line, Waze Carpool).">Ride Sharing</string>
    <string name="travel_public_transportation_title" translation_description="Header label for public transportation details.">Public Transportation</string>
    <string name="travel_biking_title" translation_description="Header label for bicycling details">Biking</string>
    <string name="travel_directions_description" translation_description="Instructions on how to find directions to the conference.">Find directions on <a href="https://www.google.com/maps/place/Shoreline+Amphitheatre/@37.4267374,-122.0827818,17z/data=!3m1!4b1!4m5!3m4!1s0x808fb9f776f5e165:0x1ddf014a1b553f3d!8m2!3d37.4267374!4d-122.0805931">Google Maps</a> or <a href="https://mobile-web.waze.com/en/meetup/location?h=9q9hvvru0">Waze</a> to 1 Amphitheatre Pkwy, Mountain View, CA 94043</string>
    <string name="travel_shuttle_description" translation_description="Shuttle service instructions.">Event shuttles will be provided at no charge to all Google I/O attendees from all Google-recommended hotels. There is also select service from San Francisco and other locations along the Peninsula. You must show your Google I/O confirmation email or conference badge to board all Google I/O event shuttles.\n\nEach pick-up location can support accessible vehicles. Please indicate on your registration form if you have any special assistance requirements, and the planning team will follow up with you directly.</string>
    <string name="travel_carpool_parking_description" translation_description="Carpool and parking instructions.">Parking is very limited and available only in Google I/O designated lots located across from Shoreline Amphitheatre along Shoreline Boulevard. There is no event parking along Amphitheatre Parkway or Charleston Road. If you plan to drive, we recommend carpooling with other attendees as preferred parking spaces will be available for cars containing two or more people.</string>
    <string name="travel_ride_sharing_description" translation_description="Ride sharing app instructions and discounts."><b>Waze Carpool</b>\nWaze Carpool is a trusted community of drivers and riders that is available to make your Google I/O commute fun, fast and affordable. Driving? Open <a href="http://Waze.com/get">Waze</a> when you get to the Bay Area. Looking for a ride? Install <a href="http://Waze.com/carpool">Waze Carpool</a> before you arrive. Check back here in the coming weeks for carpool discount codes exclusive to Google I/O attendees.\n\n<b>Lyft Line</b>\nDownload the Lyft app from Google Play and use Lyft Line to share a ride for less with others going the same way.\n<b>Discount code</b>: Googleio18\nThis code is valid from May 8–10, 2018 for shared rides with Lyft Line. It’s redeemable for up to $10 per trip and for up to 250 users per day. Rides must begin or end at Shoreline Amphitheatre.</string>
    <string name="travel_public_transportation_description" translation_description="Public transportation instructions.">Public transit doesn’t go directly to Google I/O. Stay tuned for the exact transportation locations serviced by Google I/O event shuttles.</string>
    <string name="travel_biking_description" translation_description="Bicycle instructions.">Complimentary bike parking will be available at Shoreline Amphitheatre in Parking Lot A. The Silicon Valley Bicycle Coalition will provide secure valet parking for your bicycle from 7am until the event ends each day. There are two trails, Stevens Creek Trail and Permanente Creek Trail, that are convenient for bike riders heading to Shoreline Amphitheatre. Check Google Maps for the best bike routes and directions.\n\nThe Bay Area Bike to Work Day is scheduled on Thursday, May 10th. There will be thousands of cyclists participating near Shoreline and there are hundreds of energizer stations throughout the area. Please check out the Silicon Valley Bike to Work Day website for more information.</string>
    <string name="settings_tos" translation_description="Open link to terms of service.">Terms of service</string>
    <string name="settings_privacy_policy" translation_description="Open link to privacy policy.">Privacy policy</string>
    <string name="settings_oss_licenses" translation_description="Open link to open source licenses.">Open sources licenses</string>
    <string name="faq_label" translation_description="Label for link to FAQ on website.">FAQ</string>
    <string name="built_with_material_content_description" translation_description="The app was built with Material Components.">Built with Material Components.</string>
</resources>